(#11)[8/19/2017-22:07 pre-alpha Sergix]
    Massive pre-release update.
    Project settings page created.
    Editor now uses the ACE editor API, and auto-inserts changelog entries after the user hits the ENTER key twice (or two blank newlines).
    Incorporation with the GitHub API is currently being investigated.
    Project loading page styling is almost complete.
    Updated loader functions (loader.js).
    Pushed updates to Git.

(#10)[7/17/2017-22:07 pre-alpha Sergix]
    Project changelog and documentation directories are now collapsible.
    Updated the styling of a couple of the loader pages.
    Sidebar section titles can now open the project changelog/documentation file if it uses a single file.
    Pushed updates to Git.

(#9)[7/16/2017-16:58 pre-alpha Sergix]
    Created an option selection page to choose either to select an existing project or create a new project. It is activated by clicking on the project name in the sidebar.
    Import project page presents a list of projects present in project.data and allows the user to select one to load.
    Created Travis CI testing yml. Installed Xvfb npm package for CI testing.
    Pushed updates to Git.

(#8)[7/12/2017-1:37 pre-alpha Sergix]
    If no project is loaded, it automatically brings up a project loading process to select changelog and doc dependencies.
    Styling and final scripting needs to be completed for this.
    Pushed updates to Git.

(#7)[7/10/2017-21:41 pre-alpha Sergix]
    Created appdata.js, containing methods for interacting with Entryflow's AppData directory.
    project_dir and project_files moved to editor component.
    Closing and re-opening the app automatically loads last loaded project.
    Pushed updates to Git.

(#6)[7/9/2017-20:21 pre-alpha Sergix]
    Moved sidebar icons to top of window.

(#5)[7/9/2017-15:30 pre-alpha Sergix]
    Fixed an bug where I forgot to clear the project_files array when opening a new directory.

(#4)[7/9/2017-9:08 pre-alpha Sergix]